<resources>
    <string name="app_name" translatable="false">HAWMobile</string>
    <string name="mail">E-Mail</string>
    <string name="schedule">Schedule</string>
    <string name="map">Map</string>
    <string name="news">News</string>
    <string name="faculty">Faculty</string>

    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string-array name="faculties">
        <item>computer science</item>
        <item>business management</item>
        <item>electrical engineering and industrial engineering</item>
        <item>mechanical engineering</item>
        <item>social work</item>
    </string-array>
    <string name="login_failed">The Login to HAW failed</string>

    <string name="MAP">Lageplan</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="folder">Folder</string>
    <string name="INBOX">Inbox</string>
    <string name="Junk">Junk</string>
    <string name="Trash">Trash</string>
    <string name="Sent">Sent</string>
    <string name="Drafts">Drafts</string>
    <string name="undefined">Undefined</string>
    <string name="downloading">Downloading E-Mails</string>
    <string name="downloaded">E-Mails were downloaded</string>
    <string name="delete">Delete</string>
    <string name="answer">Answer</string>
    <string name="move">Move to Folder</string>
    <string name="mark_as_unread">Mark as Unread</string>
    <string name="exit">Exit</string>

    <string name="send">Send</string>
    <string name="attach_file">Attach File</string>
    <string name="choose_file">Choose a File</string>
    <string name="write">Write</string>
    <string name="to">To</string>
    <string name="subject">Subject</string>
    <string name="write_mail">Write E-Mail</string>
    <string name="sent">E-Mail was sent</string>
    <string name="not_sent">E-Mail was not sent</string>
    <string name="warning_abbort_title">Do you want to discard the Message?</string>
    <string name="warning_abbort_text">The written Text will be deleted</string>
    <string name="cancel">Cancel</string>
    <string name="discard">Discard</string>
    <string name="invalid_mail_address">The entered E-Mail Address is invalid</string>
    <string name="title_activity_mail_settings">Settings</string>

    <string name="save">Save</string>
    <string name="open">Open</string>

    <string name="offline_mode">Offline Mode</string>

    <!-- Strings related to Settings -->

    <!-- General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">HAWMobile User</string>

    <!-- Settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>daily</item>
        <item>weekly</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>720</item>
        <item>1440</item>
        <item>10080</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Settings related to Notifications -->

    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <!-- Schedule -->
    <string name="date">Date</string>
    <string name="calendar_week">CW:</string>
    <string name="even">Even</string>
    <string name="odd">Odd</string>
    <string name="choose_color">Choose color</string>

    <string name="edit">Edit</string>
    <string name="color">Color</string>
    <string name="setsave">Save</string>
    <string name="weekly">weekly</string>
    <string name="ok">Ok</string>
    <string name="set_cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="copy">Copy</string>
    <string name="show">Show</string>

    <string name="setsubject">Subject</string>
    <string name="room">Room</string>
    <string name="prof">Prof</string>


    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>

    <string name="hourOne">08:45\n-\n10:15</string>
    <string name="hourTwo">10:30\n-\n12:00</string>
    <string name="hourThree">12:50\n-\n14:20</string>
    <string name="hourFour">14:30\n-\n16:00</string>
    <string name="hourFive">16.10\n-\n18:20</string>
    <string name="hourSix">18.35\n-\n19.20</string>


    <!-- News -->
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="vibrate">vibrate</string>
    <string name="vibration_summary">Vibrate on notifications</string>
    <string name="vibration_alert">Vibration alert</string>
    <string name="notification">Notification</string>
    <string name="notification_timer">Notification Timer</string>
    <string name="notification_summary">Receive notification for appointments</string>
    <string name="news_bw">News BW</string>
    <string name="news_ew">News EW</string>
    <string name="news_ids">News IDS</string>
    <string name="news_if">News IF</string>
    <string name="news_ma">News MA</string>
    <string name="news_sa">News SA</string>
    <string name="bulletin_board">Bulletin Board</string>
    <string name="reminder">Reminder</string>
    <string name="appointment">Appointment</string>
    <string name="appointments">Appointments</string>
    <string name="till">" till "</string>
    <string name="news_clock">""</string>
    <string name="news_daily_at">"Daily at"</string>
    <string name="appointment_connection_error">"Connection error!"</string>

</resources>
