<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="@string/pref_header_general"
            android:key="pref_key_general_settings">

        <EditTextPreference
                android:key="pref_username"
                android:title="@string/pref_title_display_name"
                android:selectAllOnFocus="true"
                android:inputType="textCapWords"
                android:capitalize="words"
                android:singleLine="true"
                android:maxLines="1"/>

    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/pref_header_notifications"
            android:key="pref_key_notification_settings">

        <SwitchPreference
                android:key="notifications_new_message"
                android:title="@string/pref_title_new_message_notifications"
                android:defaultValue="true"/>

        <RingtonePreference
                android:dependency="notifications_new_message"
                android:key="notifications_new_message_ringtone"
                android:title="@string/pref_title_ringtone"
                android:ringtoneType="notification"
                android:defaultValue="content://settings/system/notification_sound"/>

        <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
        <SwitchPreference
                android:dependency="notifications_new_message"
                android:key="notifications_new_message_vibrate"
                android:title="@string/pref_title_vibrate"
                android:defaultValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/pref_header_data_sync"
            android:key="pref_key_syncronizazion_settings">

        <ListPreference
                android:key="sync_frequency"
                android:title="@string/pref_title_sync_frequency"
                android:entries="@array/pref_sync_frequency_titles"
                android:entryValues="@array/pref_sync_frequency_values"
                android:defaultValue="-1"
                android:negativeButtonText="@null"
                android:positiveButtonText="@null"/>

        <!-- This preference simply launches an intent when selected. Use this UI sparingly, per
             design guidelines. -->
        <Preference android:title="@string/pref_title_system_sync_settings">
            <intent android:action="android.settings.SYNC_SETTINGS"/>
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>