<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <RelativeLayout
            android:layout_width="match_parent"
            android:id="@+id/adapter_layout_id"
            android:layout_height="wrap_content">

        <de.haw_landshut.hawmobile.schedule.UpOnlyAutoCompleteTextView
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:id="@+id/et_raum"
                android:hint="@string/room" android:enabled="false"
                android:layout_below="@+id/et_prof"
                android:layout_alignParentStart="true"
                android:textSize="14sp"
                android:imeOptions="actionDone"
                android:dropDownHeight="100dp"
                android:completionThreshold="1"
                android:dropDownAnchor="@+id/et_fach"

        />
        <de.haw_landshut.hawmobile.schedule.UpOnlyAutoCompleteTextView
                android:hint="@string/prof"
                android:layout_width="200dp"
                android:layout_height="wrap_content" android:id="@+id/et_prof"
                android:layout_below="@+id/et_fach" android:layout_alignParentStart="true"
                android:nextFocusForward="@id/et_raum"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:completionThreshold="3"
                android:dropDownHeight="100dp"
                android:dropDownAnchor="@id/et_fach"

        />      <de.haw_landshut.hawmobile.schedule.UpOnlyAutoCompleteTextView
            android:hint="@string/setsubject"
            android:layout_width="300dp"
            android:layout_height="wrap_content" android:id="@+id/et_fach"
            android:layout_alignParentTop="true" android:layout_alignParentStart="true"
            android:nextFocusForward="@id/et_prof"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:completionThreshold="3"
            android:dropDownHeight="100dp"
            android:dropDownAnchor="@id/et_fach"

    />

        <CheckBox
                android:text="@string/weekly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/wöchentlCheckbox"
                android:visibility="gone"
                android:layout_alignStart="@+id/btn_save" android:layout_alignParentBottom="true"/>
        <Button
                android:text="@string/color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/colorPicker"
                android:visibility="gone"
                android:layout_alignBaseline="@+id/btn_cancel" android:layout_alignBottom="@+id/btn_cancel"
                android:layout_toStartOf="@+id/btn_cancel"/>
        <Button
                android:text="@string/copy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/copy"
                android:layout_alignBaseline="@+id/clear" android:layout_alignBottom="@+id/clear"
                android:layout_toStartOf="@+id/clear"/>
        <Button
                android:text="@string/clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/clear"
                android:textSize="14sp"
                android:layout_below="@+id/et_fach" android:layout_alignParentEnd="true"/>


        <Button
                android:text="@string/edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_edit"
                android:textSize="14sp" android:layout_alignTop="@+id/et_fach"
                android:layout_alignParentEnd="true"/>
        <Button
                android:text="@string/set_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_cancel"
                android:textSize="14sp"
                android:visibility="gone"
                android:layout_below="@+id/et_fach" android:layout_alignParentEnd="true"/>
        <Button
                android:text="@string/setsave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_save"
                android:textSize="14sp" android:layout_alignTop="@+id/et_fach"
                android:layout_alignParentEnd="true" android:visibility="gone"/>
        <Button
                android:text="@string/show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btn_show" android:layout_below="@+id/clear"
                android:layout_alignStart="@+id/clear"/>
    </RelativeLayout>

</LinearLayout>