<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="de.haw_landshut.hawmobile.mail.MailCreateActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentBottom="true" android:layout_alignParentEnd="true"
            tools:layout_constraintTop_creator="1" tools:layout_constraintRight_creator="1"
            tools:layout_constraintBottom_creator="1" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintRight_toRightOf="parent" android:layout_marginTop="8dp"
            tools:layout_constraintLeft_creator="1" android:layout_marginBottom="8dp"
            app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintTop_toTopOf="parent">
        <RelativeLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/to"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/to_textView"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium.Inverse"
                    android:textSize="18sp"
                    android:textColor="?android:textColorHint"
                    android:gravity="center_vertical|start" android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/to_email_editText"
                    android:layout_toEndOf="@id/to_textView"/>
        </RelativeLayout>
        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:ems="10"
                  android:hint="@string/subject"
                  android:id="@+id/subject_editText"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textMultiLine"
                android:ems="10"
                android:gravity="top|start"
                android:id="@+id/email_text_editText" tools:ignore="TextFields"
                android:textAlignment="textStart"
                android:hint="@string/write_mail"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
